@@ -1,0 +1,27 @@
+{
+  "url": "http://host/url",
+  "method": "GET",
+  "data": {},
+  "query_string": "query",
+  "cookies": {
+    "Cookie1": "Value1"
+  },
+  "headers":  [
+    ["Header1","Value1"],
+    ["Header2","Value1"],
+    ["Header2","Value2"]
+  ],
+  "env": {
+    "REMOTE_ADDR": "1.2.3.4",
+    "SERVER_NAME": "server-name",
+    "SERVER_PORT": 1234,
+    "LOCAL_ADDR": "5.6.7.8",
+    "LOCAL_NAME": "local-name",
+    "LOCAL_PORT": 5678,
+    "SERVER_PROTOCOL": "HTTP",
+    "REQUEST_SECURE": false,
+    "REQUEST_ASYNC": false,
+    "AUTH_TYPE": null,
+    "REMOTE_USER": null
+  }
+}
